--- a/hammers/emacs/email.org
+++ b/hammers/emacs/email.org
@@ -1,21 +1,12 @@
-#+TITLE:  mailbox 配置
+#+TITLE:  emacs mail 配置
 #+AUTHOR: 孙建康（rising.lambda）
 #+EMAIL:  rising.lambda@gmail.com
 
-#+DESCRIPTION: mailbox 配置文件
+#+DESCRIPTION: emacs mail 配置文件
 #+PROPERTY:    header-args        :mkdirp yes
 #+OPTIONS:     num:nil toc:nil todo:nil tasks:nil tags:nil
 #+OPTIONS:     skip:nil author:nil email:nil creator:nil timestamp:nil
 #+INFOJS_OPT:  view:nil toc:nil ltoc:t mouse:underline buttons:0 path:http://orgmode.org/org-info.js
-
-
-*** mail box 初始化
-    
-    #+NAME: maildir
-    #+BEGIN_SRC shell :var maildir=(m/resolve "${m/home.d}/mails")
-      mkdir -p ${maildir}/{sietium,lambda}
-      echo ${maildir}
-    #+END_SRC
 
 *** notmuch 配置
     #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/xdg.conf.d}/emacs/lisp/init-email.el") :comments link
@@ -76,322 +67,6 @@
                (lambda (proc state)
                  (message nil) ;; clear minibuffer
                  (notmuch-poll-and-refresh-this-buffer))))))
-
-    #+END_SRC
-
-*** mbsync 配置（同步邮件）
-    #+BEGIN_SRC conf :eval never :exports code :tangle (m/resolve "${m/xdg.conf.d}/isync/config") :noweb yes
-      IMAPAccount lambda
-      Host imap.gmail.com
-      User rising.lambda@gmail.com
-      SSLType IMAPS
-      AuthMechs PLAIN
-      #PassCmd "security find-generic-password -s lambda -w"
-      PassCmd "gpg --for-your-eyes-only --no-tty -qd ~/credentials/authinfo.gpg 2>/dev/null | grep rising.lambda@gmail.com|awk '{print $6}'"
-      # To rotate:
-      # > security delete-generic-password -s mbsync-gandi-password
-      # > security add-generic-password -a stig@brautaset.org -s mbsync-gandi-password -w APP-SPECIFIC-PASSWORD
-
-      IMAPStore lambda-remote
-      Account lambda
-
-      MaildirStore lambda-local
-      SubFolders Verbatim
-      Path <<maildir()>>/lambda/
-      Inbox <<maildir()>>/lambda/INBOX
-
-      Channel lambda-inbox
-      Far :lambda-remote:
-      Near :lambda-local:
-      Sync All
-      Create Both
-      Expunge Both
-      SyncState *
-      Patterns INBOX
-
-      Channel lambda-starred
-      Far :lambda-remote:
-      Near :lambda-local:
-      Sync All
-      Create Both
-      Expunge Both
-      SyncState *
-      Patterns Starred
-
-      Channel lambda-snoozed
-      Far :lambda-remote:
-      Near :lambda-local:
-      Sync All
-      Create Both
-      Expunge Both
-      SyncState *
-      Patterns Snoozed
-
-      Channel lambda-sent
-      Far :lambda-remote:
-      Near :lambda-local:
-      Sync All
-      Create Both
-      Expunge Both
-      SyncState *
-      Patterns Sent
-
-      Channel lambda-spam
-      Far :lambda-remote:
-      Near :lambda-local:
-      Sync All
-      Create Both
-      Expunge Both
-      SyncState *
-      Patterns Spam
-
-      Channel lambda-drafts
-      Far :lambda-remote:
-      Near :lambda-local:
-      Sync All
-      Create Both
-      Expunge Both
-      SyncState *
-      Patterns Drafts
-
-
-      Channel lambda-trash
-      Far :lambda-remote:
-      Near :lambda-local:
-      Sync All
-      Create Both
-      Expunge Both
-      SyncState *
-      Patterns Trash
-
-      IMAPAccount sietium
-      Host imap.qiye.aliyun.com
-      User neo@sietium.com
-      SSLType IMAPS
-      AuthMechs LOGIN
-      PassCmd "gpg --for-your-eyes-only --no-tty -qd ~/credentials/authinfo.gpg 2>/dev/null | grep neo@sietium.com | awk '{print $6}'"
-      #PassCmd "security find-generic-password -s lambda -w"
-
-      # To rotate:
-      # > security delete-generic-password -s mbsync-gandi-password
-      # > security add-generic-password -a stig@brautaset.org -s mbsync-gandi-password -w APP-SPECIFIC-PASSWORD
-
-      IMAPStore sietium-remote
-      Account sietium
-
-      MaildirStore sietium-local
-      SubFolders Verbatim
-      Path <<maildir()>>/sietium/
-      Inbox <<maildir()>>/sietium/INBOX
-
-      Channel sietium-inbox
-      Far :sietium-remote:INBOX
-      Near :sietium-local:INBOX
-      Sync All
-      Create Both
-      Expunge Both
-      SyncState *
-
-      Channel sietium-drafts
-      Far :sietium-remote:Drafts
-      Near :sietium-local:Drafts
-      Sync All
-      Create Both
-      Expunge Both
-      SyncState *
-
-      Channel sietium-trash
-      Far :sietium-remote:Trash
-      Near :sietium-local:Trash
-      Sync All
-      Create Both
-      Expunge Both
-      SyncState *
-
-      Channel sietium-sent
-      Far :sietium-remote:Sent
-      Near :sietium-local:Sent
-      Sync All
-      Create Both
-      Expunge Both
-      SyncState *
-
-      Channel sietium-spam
-      Far :sietium-remote:Spam
-      Near :sietium-local:Spam
-      Sync All
-      Create Both
-      Expunge Both
-      SyncState *
-
-      Channel sietium-archive
-      Far :sietium-remote:Archive
-      Near :sietium-local:Archive
-      Sync All
-      Create Both
-      Expunge Both
-      SyncState *
-
-      Channel sietium-gb2
-      Far :sietium-remote:GB2
-      Near :sietium-local:GB2
-      Sync All
-      Create Both
-      Expunge Both
-      SyncState *
-
-      Channel sietium-patent
-      Far :sietium-remote:Patent
-      Near :sietium-local:Patent
-      Sync All
-      Create Both
-      Expunge Both
-      SyncState *
-
-      Group sietium
-      Channel sietium-inbox
-      Channel sietium-drafts
-      Channel sietium-trash
-      Channel sietium-sent
-      Channel sietium-spam
-      Channel sietium-archive
-      Channel sietium-gb2
-      Channel sietium-patent
-
-      Group lambda
-      Channel lambda-inbox
-      Channel lambda-starred
-      Channel lambda-snoozed
-      Channel lambda-sent
-      Channel lambda-spam
-      Channel lambda-drafts
-      Channel lambda-trash
-    #+END_SRC
-
-*** mbsync pre-sync
-    #+BEGIN_SRC shell :eval never :exports code :tangle (m/resolve "${m/xdg.conf.d}/mbsync/hooks/pre-sync") :tangle-mode (identity #o755) :shebang #!/bin/bash :noweb yes :comments link
-
-    #+END_SRC
-
-*** notmuch 配置文件
-    #+BEGIN_SRC conf :eval never :exports code :tangle (m/resolve "${m/xdg.conf.d}/notmuch/default/config") :noweb yes :comments link
-      # 相对于 HOMEDIR ~ 的目录
-      [database]
-      path=<<maildir()>>
-
-      [user]
-      name=neo
-      primary_email=rising.lambda@gmail.com
-      other_email=neo@sietium.com
-
-      [new]
-      tags=new;
-      ignore=.mbsyncstate;.mbsyncstate.journal;.mbsyncstate.lock;.mbsyncstate.new;.uidvalidity;.isyncuidmap.db
-
-      [search]
-      exclude_tags=deleted;spam;
-
-      [maildir]
-      synchronize_flags=true
-
-    #+END_SRC
-
-*** notmuch hook
-**** pre hook
-     #+BEGIN_SRC shell :eval never :exports code :tangle (m/resolve "${m/xdg.conf.d}/notmuch/default/hooks/pre-new") :tangle-mode (identity #o755) :shebang #!/bin/bash :noweb yes :comments link
-       # Move a message file while removing its UID-part
-       function move { s=${1##*/}; s=${s%%,*}; echo "mv -f $1 $2/$s"; }
-
-       echo "moving $(notmuch count --output=files --exclude=false tag:gb2 AND folder:sietium/INBOX AND NOT tag:unread AND NOT from:neo) gb2 messages to the GB2"
-       for i in $(notmuch search --exclude=false --output=files tag:gb2 AND folder:sietium/INBOX AND NOT tag:unread AND NOT from:neo); do
-            move $i "<<maildir()>>/sietium/GB2/cur"
-       done
-
-       # # Move all deleted messages to the Trash folder
-       # echo moving $(notmuch count --output=files --exclude=false tag:deleted AND NOT folder:Trash) deleted messages to the Trash folder
-       # for i in $(notmuch search --exclude=false --output=files tag:deleted AND NOT folder:Trash); do
-       #     move $i "<<maildir()>>/sietium/Trash/cur"
-       # done
-
-       # # Move all spam messages to the Spam folder
-       # echo moving $(notmuch count --output=files tag:spam AND NOT folder:Spam) spam-marked messages to the Spam folder
-       # for i in $(notmuch search --output=files tag:spam AND NOT folder:Spam); do
-       #     move $i "<<maildir()>>/sietium/Spam/cur"
-       # done
-
-       # # Move all archived messages from Inbox to Archive folder
-       # echo Moving $(notmuch count --output=files folder:Inbox AND NOT tag:inbox) archived messages from Inbox to Archive folder
-       # for i in $(notmuch search --output=files folder:Inbox AND NOT tag:inbox); do
-       #     move $i "<<maildir()>>/sietium/Archive/cur"
-       # done
-       mbsync -c ${XDG_CONFIG_HOME}/isync/config sietium-inbox sietium-drafts sietium-sent sietium-spam sietium-archive sietium-gb2 sietium-patent 
-
-       notmuch new --no-hooks
-     #+END_SRC
-
-**** post hook
-     #+BEGIN_SRC shell :eval never :exports code :tangle (m/resolve "${m/xdg.conf.d}/notmuch/default/hooks/post-new") :tangle-mode (identity #o755) :shebang #!/bin/bash :noweb yes :comments link
-       set -e 
-
-       echo -n Filtering new messages
-       ## All messages 
-
-       ## Poor man's progress bar. adjust for number of steps 
-       STEPS=30
-       echo -n '   ['
-       for n in `seq $STEPS`; do
-           echo -n '.'
-       done
-       echo -ne ']\b'
-       # Backspace
-       for n in `seq $STEPS`; do
-           echo -ne '\b'
-       done
-
-       ## notmuch post-processing script
-
-       ## Generally only works with messages with the tag:new folder
-       notmuch tag +inbox +unread -new -- tag:new
-       # 需要处理下 send
-       notmuch tag +gb2 -- to:'gb02*' and folder:'sietium/INBOX'
-
-       echo ']'
-     #+END_SRC
-
-**** post insert hook
-     #+BEGIN_SRC shell :eval never :exports code :tangle (m/resolve "${m/xdg.conf.d}/notmuch/default/hooks/post-insert") :tangle-mode (identity #o755) :shebang #!/bin/bash :noweb yes :comments link
-       notmuch tag +watch -inbox -new tag:new 'folder:/.*Sent.*/'
-     #+END_SRC
-     
-*** msmtp 配置（发送端）
-    #+BEGIN_SRC conf :eval never :exports code :tangle (m/resolve "${m/xdg.conf.d}/msmtp/config")
-      # default config
-      defaults
-      port 587
-      tls on
-      tls_trust_file /etc/ssl/cert.pem
-      auth on
-
-      # config for the rising.lambda
-      account lambda
-      host smtp.gmail.com
-      port 587
-      tls on
-      tls_starttls on
-      auth on
-      user rising.lambda@gmail.com
-      from rising.lambda@gmail.com
-      PassCmd "gpg --for-your-eyes-only --no-tty -qd ~/credentials/authinfo.gpg 2>/dev/null | grep rising.lambda@gmail.com|awk '{print $6}'"
-
-      account sietium
-      host smtp.qiye.aliyun.com
-      port 465
-      tls on
-      tls_starttls on
-      auth on
-      user neo@sietium.com
-      from neo@sietium.com
-      PassCmd "gpg --for-your-eyes-only --no-tty -qd ~/credentials/authinfo.gpg 2>/dev/null | grep neo@sietium.com |awk '{print $6}'"
     #+END_SRC
 
 *** emacs 发送端配置
