--- a/hammers/emacs/chinese.org
+++ b/hammers/emacs/chinese.org
@@ -91,15 +91,14 @@
 
 *** 安装 librime
     #+HEADER: :var emacs_conf=(m/resolve "${m/xdg.conf.d}/emacs")
-    #+BEGIN_SRC shell :eval (or (and (eq m/os 'macos) "yes") "never") :shebang #!/bin/bash :exports none :tangle no :results output silent :noweb yes :prologue "exec 2>&1" :epilogue ":" :comments link
+    #+BEGIN_SRC shell :eval (or (and (eq m/os 'macos) "yes") "never") :shebang #!/bin/bash :exports code :tangle (m/resolve "${m/xdg.conf.d}/emacs/bin/rimeable") :tangle-mode (identity #o755) :results output silent :noweb yes :comments link
       cd ${emacs_conf}/3rdparty/librime
       git clean -fdx
-      git submodule update --init
-      export LIBRARY_PATH=${LIBRARY_PATH}:/usr/local/opt/icu4c/lib
-      make xcode/thirdparty/boost -j `nproc`
-      make xcode/thirdparty -j `nproc`
-      make xcode -j `nproc`
-      make install -j `nproc`
+      git submodule update --init --recursive
+      ./install-boost.sh
+      export BOOST_ROOT="$(pwd)/deps/boost-1.84.0"
+      make deps
+      make
     #+END_SRC
 
 *** 安装 liberime
@@ -133,7 +132,7 @@
     #+HEADER: :var erime_path=(m/resolve "${m/xdg.conf.d}/emacs/3rdparty/liberime")
     #+HEADER: :var rime_path=(m/resolve "${m/xdg.conf.d}/emacs/3rdparty/librime")
     #+HEADER: :var emacs_major=(format "%d" emacs-major-version)
-    #+BEGIN_SRC shell :eval never :shebang #!/bin/bash :exports none :tangle no :results output silent :noweb yes :prologue "exec 2>&1" :epilogue ":" :comments link
+    #+BEGIN_SRC shell :eval yes :shebang #!/bin/bash :exports code :tangle (m/resolve "${m/xdg.conf.d}/emacs/bin/rimeable") :tangle-mode (identity #o755) :comments link :results output silent :noweb yes
       export RIME_PATH=${rime_path}
       export EMACS_MAJOR_VERSION=${emacs_major}
       cd ${erime_path}
@@ -142,6 +141,7 @@
           | grep "${rime_path}/build/lib" \
           | sed -r 's#path ([a-zA-Z0-9./:]+)[[:space:]].*#\1#g' \
           | xargs -I {} install_name_tool -delete_rpath {} ${erime_path}/src/liberime-core.so
+      install_name_tool -add_rpath "${rime_path}/build/lib" ${erime_path}/src/liberime-core.so
       install_name_tool -add_rpath "${rime_path}/build/lib/Release" ${erime_path}/src/liberime-core.so
     #+END_SRC
 
