--- a/hammers/notmuch/config.org
+++ b/hammers/notmuch/config.org
@@ -87,13 +87,13 @@
 
 *** pre hook
     #+BEGIN_SRC shell :eval never :exports code :tangle (m/resolve "${m/xdg.conf.d}/notmuch/default/hooks/pre-new") :tangle-mode (identity #o755) :shebang #!/bin/bash :noweb yes :comments link
-      proxychains4 -q mbsync -c ${XDG_CONFIG_HOME}/isync/config lambda
+      proxychains4 -q mbsync -c ${XDG_CONFIG_HOME}/isync/config -a
       notmuch new --no-hooks
     #+END_SRC
 
 *** post hook
     #+BEGIN_SRC shell :eval never :exports code :tangle (m/resolve "${m/xdg.conf.d}/notmuch/default/hooks/post-new") :tangle-mode (identity #o755) :shebang #!/bin/bash :noweb yes :comments link
-      afew --tag --new -d -v -v -v
+      afew --tag --new
     #+END_SRC
 
 *** post insert hook
