feat(proxychains): add http proxy

--- a/hammers/proxychains/config.org
+++ b/hammers/proxychains/config.org
@@ -225,6 +225,7 @@
       # add proxy here ...
       # meanwile
       # defaults set to "tor"
-      socks4 	127.0.0.1 1080
+      socks5    127.0.0.1 1080
+      http      127.0.0.1 8080
     #+END_SRC
 
