fix: send email related config

--- a/hammers/emacs/email.org
+++ b/hammers/emacs/email.org
@@ -25,7 +25,8 @@
         (notmuch-address-use-company nil)
         (notmuch-hello-thousands-separator ",")
         (notmuch-mua-cite-function (quote message-cite-original-without-signature))
-        (notmuch-fcc-dirs "sent +sent -unread -inbox")
+        (notmuch-fcc-dirs '(("rising.lambda@gmail.com" . "\"lambda/[Gmail]/Sent Mail\"")
+                           ("neo@sietium.com" . "sietium/Sent")))
         (notmuch-saved-searches
          (quote
           ((:name "Inbox" :query "tag:inbox" :key "i")
