--- a/hammers/mime/config.org
+++ b/hammers/mime/config.org
@@ -81,40 +81,110 @@
 *** mime.types 配置文件内容
     #+BEGIN_SRC conf :eval never :exports code :tangle (m/resolve "${m/xdg.conf.d}/mime/types") :noweb yes :comments link :mkdirp yes
       #MIME type                                                                             Extensions
-      application/vnd.openxmlformats-officedocument.spreadsheetml.sheet                      xlsx
-      application/vnd.ms-excel                                                               xls
-      application/vnd.openxmlformats-officedocument.wordprocessingml.document                docx
-      application/msword                                                                     doc
+      audio/aac                                                                 	       aac
+      application/x-abiword                                                     	       abw
+      image/apng                                                                	       apng
+      application/x-freearc                                                     	       arc
+      image/avif                                                                	       avif
+      video/x-msvideo                                                           	       avi
+      application/vnd.amazon.ebook                                              	       azw
+      application/octet-stream                                                  	       bin
+      image/bmp                                                                 	       bmp
+      application/x-bzip                                                        	       bz
+      application/x-bzip2                                                       	       bz2
+      application/x-cdf                                                         	       cda
+      application/x-csh                                                         	       csh
+      text/css                                                                  	       css
+      text/csv                                                                  	       csv
+      application/msword                                                        	       doc
+      application/vnd.openxmlformats-officedocument.wordprocessingml.document   	       docx
+      application/vnd.ms-fontobject                                             	       eot
+      application/epub+zip                                                      	       epub
+      application/gzip                                                          	       gz
+      image/gif                                                                 	       gif
+      text/html                                                                 	       htm
+      text/html                                                                 	       html
+      image/vnd.microsoft.icon                                                  	       ico
+      text/calendar                                                             	       ics
+      application/java-archive                                                  	       jar
+      image/jpeg                                                                	       jpeg
+      image/jpeg                                                                	       jpg
+      text/javascript                                                                          js
+      application/json                                                          	       json
+      application/ld+json                                                       	       jsonld
+      audio/midi                                                                	       mid
+      audio/midi                                                                	       midi
+      audio/x-midi                                                              	       mid
+      audio/x-midi                                                              	       midi
+      text/javascript                                                           	       mjs
+      audio/mpeg                                                                	       mp3
+      video/mp4                                                                 	       mp4
+      video/mpeg                                                                	       mpeg
+      application/vnd.apple.installer+xml                                       	       mpkg
+      application/vnd.oasis.opendocument.presentation                           	       odp
+      application/vnd.oasis.opendocument.spreadsheet                            	       ods
+      application/vnd.oasis.opendocument.text                                   	       odt
+      audio/ogg                                                                 	       oga
+      video/ogg                                                                 	       ogv
+      application/ogg                                                           	       ogx
+      audio/opus                                                                	       opus
+      font/otf                                                                  	       otf
+      image/png                                                                 	       png
+      application/pdf                                                           	       pdf
+      application/x-httpd-php                                                   	       php
+      application/vnd.ms-powerpoint                                             	       ppt
+      application/vnd.openxmlformats-officedocument.presentationml.presentation 	       pptx
+      application/vnd.rar                                                       	       rar
+      application/rtf                                                           	       rtf
+      application/x-sh                                                          	       sh
+      image/svg+xml                                                             	       svg
+      application/x-tar                                                         	       tar
+      image/tiff                                                                	       tif
+      image/tiff                                                                	       tiff
+      video/mp2t                                                                	       ts
+      font/ttf                                                                  	       ttf
+      text/plain                                                                	       txt
+      application/vnd.visio                                                     	       vsd
+      audio/wav                                                                 	       wav
+      audio/webm                                                                	       weba
+      video/webm                                                                	       webm
+      image/webp                                                                	       webp
+      font/woff                                                                 	       woff
+      font/woff2                                                                	       woff2
+      application/xhtml+xml                                                     	       xhtml
+      application/vnd.ms-excel                                                  	       xls
+      application/vnd.openxmlformats-officedocument.spreadsheetml.sheet         	       xlsx
+      application/xml                                                           	       xml
+      application/atom+xml                                                      	       xml
+      text/xml                                                                  	       xml
+      application/vnd.mozilla.xul+xml                                           	       xul
+      application/zip                                                           	       zip
+      video/3gpp                                                                	       3gp
+      audio/3gpp                                                                	       3gp
+      video/3gpp2                                                               	       3g2
+      audio/3gpp2                                                               	       3g2
+      application/x-7z-compressed                                               	       7z
     #+END_SRC
 
 *** mailcap 配置文件
     #+BEGIN_SRC conf :eval never :exports code :tangle (m/resolve "${m/xdg.conf.d}/mime/caps") :noweb yes :comments link :mkdirp yes
-      # images
-      image/bmp;                open %s; nametemplate=%s.bmp; 
-      image/gif;                open %s; nametemplate=%s.gif;
-      image/ilbm;               open %s; nametemplate=%s.ilbm;
-      image/jpg;                open %s; nametemplate=%s.jpg;
-      image/jpeg;               open %s; nametemplate=%s.jpeg;
-      image/png;                open %s; nametemplate=%s.png;
-      image/tiff;               open %s; nametemplate=%s.tiff;
-      image/x-png;              open %s; nametemplate=%s.x-png;
-      image/x-ilbm;             open %s; nametemplate=%s.x-ilbm;
+      text/html;                                                                w3m -dump -o document_charset=%{charset} '%s'; nametemplate=%s.html; copiousoutput
 
-      text/html;                w3m -dump -o document_charset=%{charset} '%s'; nametemplate=%s.html; copiousoutput
-      application/pdf;          open %s; nametemplate=%s.pdf;
-      image/pdf;                open %s; nametemplate=%s.pdf;
+      # pdf
+      application/pdf;                                                          open %s; nametemplate=%s.pdf;
+      image/pdf;                                                                open %s; nametemplate=%s.pdf;
 
       # word, excel
       # wordview is in the catdoc package
-      application/rtf;                                                                open %s; nametemplate=%s.docx;
-      application/msword;                                                             open %s; nametemplate=%s.doc;
-      application/vnd.openxmlformats-officedocument.wordprocessingml.document;        open %s; nametemplate=%s.docx;
-      application/vnd.oasis.opendocument.text;                                        open %s; nametemplate=%s.docx;
+      application/rtf;                                                          open %s; nametemplate=%s.docx;
+      application/msword;                                                       open %s; nametemplate=%s.doc;
+      application/vnd.openxmlformats-officedocument.wordprocessingml.document;  open %s; nametemplate=%s.docx;
+      application/vnd.oasis.opendocument.text;                                  open %s; nametemplate=%s.docx;
 
-      application/excel;                                                              open %s; nametemplate=%s.xls
-      application/msexcel;                                                            open %s; nametemplate=%s.xls
-      application/vnd.ms-excel;                                                       open %s; nametemplate=%s.xls
-      application/x-msexcel;                                                          open %s; nametemplate=%s.xls
-      application/vnd.openxmlformats-officedocument.spreadsheetml.sheet;              open %s; nametemplate=%s.xlsx
-      application/xls;                                                                open %s; nametemplate=%s.xlsx;
+      application/excel;                                                        open %s; nametemplate=%s.xls
+      application/msexcel;                                                      open %s; nametemplate=%s.xls
+      application/vnd.ms-excel;                                                 open %s; nametemplate=%s.xls
+      application/x-msexcel;                                                    open %s; nametemplate=%s.xls
+      application/vnd.openxmlformats-officedocument.spreadsheetml.sheet;        open %s; nametemplate=%s.xlsx
+      application/xls;                                                          open %s; nametemplate=%s.xlsx;
     #+END_SRC
